# lancedb-go

./: .gitattributes  .gitignore  .golangci.yml  BINARY_DISTRIBUTION.md  BUILD_SYSTEM.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_PROCESS.md  build.go  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/download-binaries/: main.go
examples/: Makefile  README.md  go.mod  go.sum
examples/basic_crud/: basic_crud.go
examples/batch_operations/: batch_operations.go
examples/hybrid_search/: hybrid_search.go
examples/hybrid_vector_fts/: hybrid_vector_fts.go
examples/index_builder/: index_builder.go
examples/index_management/: index_management.go
examples/index_operations_example/: main.go
examples/merge_insert/: merge_insert.go
examples/optimize_action/: optimize_action.go
examples/query_tuning/: query_tuning.go
examples/reranker/: reranker.go
examples/storage_configuration/: storage_configuration.go
examples/vector_search/: vector_search.go
examples/wait_for_index/: wait_for_index.go
include/: lancedb.h
internal/binaries/: download.go
pkg/: add_method_test.go  connect.go  connection.go  data_operations_test.go  doc.go  get_all_indexes_test.go  query.go  schema.go  select_test.go  storage_options_test.go  table.go  table_methods_test.go
pkg/contracts/: config.go  i_connection.go  i_merge_insert.go  i_query.go  i_schema.go  i_table.go  storage_keys.go  types.go
pkg/internal/: add_options_validation_test.go  arrow_convert.go  connection.go  merge_insert.go  query.go  schema.go  table.go  table_schema_evolve.go  table_time_travel.go
pkg/lancedb/: connect.go  connect_s3_test.go  doc.go
pkg/tests/: add_method_test.go  create_index_v2_test.go  data_operations_test.go  get_all_indexes_test.go  hybrid_search_test.go  merge_insert_test.go  multitype_vector_query_test.go  optimize_action_test.go  prewarm_data_test.go  prewarm_index_test.go  query_tuning_test.go  reranker_test.go  schema_evolve_test.go  storage_options_test.go  table_select_test.go  table_test.go  time_travel_test.go  update_expr_test.go  wait_for_index_test.go  write_parallelism_test.go
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: connection.rs  conversion.rs  data.rs  database.rs  ffi.rs  index.rs  lib_simple.rs  metadata.rs  query.rs  refs.rs  runtime.rs  schema.rs  schema_evolve.rs  simple.rs  table.rs  types.rs
scripts/: build-all-platforms.sh  build-native.sh  download-artifacts.sh  test-binary-distribution.sh
